<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_detail"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="0.5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/im_stadium"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_100"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:id="@+id/tx_stadium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:gravity="center" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:gravity="center"
                android:text="@string/match" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="0.5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tx_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/dp_10"
                            android:layout_marginRight="@dimen/dp_10"
                            android:layout_weight="5"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/im_home_team"
                                android:layout_width="@dimen/dp_50"
                                android:layout_height="@dimen/dp_50"
                                android:contentDescription="@string/app_name" />

                            <TextView
                                android:id="@+id/tx_home_team"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_3" />

                            <TextView
                                android:id="@+id/tx_home_score"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/vs" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_10"
                            android:layout_marginLeft="@dimen/dp_10"
                            android:layout_weight="5"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/im_away_team"
                                android:layout_width="@dimen/dp_50"
                                android:layout_height="@dimen/dp_50"
                                android:contentDescription="@string/app_name" />

                            <TextView
                                android:id="@+id/tx_away_team"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_3" />

                            <TextView
                                android:id="@+id/tx_away_score"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tx_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:gravity="center" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:gravity="center"
                android:text="@string/goals" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="0.5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tx_home_goals"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dp_5"
                        android:layout_marginRight="@dimen/dp_5"
                        android:layout_weight="5" />

                    <TextView
                        android:id="@+id/tx_away_goals"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_5"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:layout_weight="5" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:gravity="center"
                android:text="@string/goal_keeper" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="0.5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tx_home_keeper"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dp_5"
                        android:layout_marginRight="@dimen/dp_5"
                        android:layout_weight="5" />

                    <TextView
                        android:id="@+id/tx_away_keeper"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_5"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:layout_weight="5" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:gravity="center"
                android:text="@string/defense" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="0.5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tx_home_defense"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dp_5"
                        android:layout_marginRight="@dimen/dp_5"
                        android:layout_weight="5" />

                    <TextView
                        android:id="@+id/tx_away_defense"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_5"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:layout_weight="5" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:gravity="center"
                android:text="@string/midfield" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="0.5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tx_home_midfield"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dp_5"
                        android:layout_marginRight="@dimen/dp_5"
                        android:layout_weight="5" />

                    <TextView
                        android:id="@+id/tx_away_midfield"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_5"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:layout_weight="5" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:gravity="center"
                android:text="@string/forward" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="0.5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tx_home_forward"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dp_5"
                        android:layout_marginRight="@dimen/dp_5"
                        android:layout_weight="5" />

                    <TextView
                        android:id="@+id/tx_away_forward"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_5"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:layout_weight="5" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:gravity="center"
                android:text="@string/subtitutes" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="0.5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tx_home_subtitures"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dp_5"
                        android:layout_marginRight="@dimen/dp_5"
                        android:layout_weight="5" />

                    <TextView
                        android:id="@+id/tx_away_subtitutes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_5"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:layout_weight="5" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>